fix: improve token logic and better handle errors